@@ -113,6 +113,8 @@ CHANGES IN CUPS V1.1.5
 	- Updated the lp and cancel commands to support all of
 	  the Solaris print options (some are simply ignored
 	  since they do not map)
+	- Updated the scheduler to limit the number of file
+	  descriptors to the maximum select() set size.
 
 
 CHANGES IN CUPS v1.1.4
